# pi5_hack

./: LICENSE
baremetal/: Embed.toml
baremetal/XX_defmt/: .gdb_history  .gitignore  Cargo.toml  debug_run.sh  gdb_init  ldscript.lds
baremetal/XX_defmt/.cargo/: config.toml
baremetal/XX_defmt/src/: critical_section.rs  main.rs  startup.s
baremetal/XX_jtag_startup/: Cargo.toml  Makefile  ldscript.lds
baremetal/XX_jtag_startup/.cargo/: config.toml
baremetal/XX_jtag_startup/src/: main.rs
on_linux/rp1_pio/: Cargo.toml
on_linux/rp1_pio/src/: main.rs
