[package]
edition = "2021"
name = "baremetal_pi5_defmt"
version = "0.1.0"
rust-version = "1.75"

[build-dependencies]
cc = "1.0.83"

[dependencies]
critical-section = { version = "1.1.2", features = ["restore-state-none"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
tock-registers = "0.9.0"

[features]

# https://github.com/rp-rs/rp2040-project-template/blob/main/Cargo.toml
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true
